# portfolio_testing

./: .gitignore  main.py  portfolio_analysis_report_20250906_200101.csv  pyproject.toml  requirements.txt
settings/: tickers_in_portfolio.yaml
src/: __init__.py  config.py  quotation_data.py
src/creating_portfolio/: __init__.py  calculate_weights_portfolio.py  capitalization_moex.py
src/loading_quotations/: __init__.py  moex.py  nyse.py
src/utils/: __init__.py  directory_validator.py
